--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "firmys-gameServices",
-  "version": "0.0.0",
+  "name": "@0megaphil/firmys-gameservices",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/0megaPhil/angular-gameServices.git"
+  },
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +12,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^18.1.0",
     "@angular/common": "^18.1.0",
