--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@apollo/client": "^3.0.0",
+    "@graphql-tools/schema": "^10.0.4",
+    "apollo-angular": "^7.0.2",
+    "graphql": "^16.9.0",
+    "graphql-import-node": "^0.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
